fix: prevents horizontal scrolling

--- a/src/scenes/movies/scenes/movie-list/movie-item/movie-item.scss
+++ b/src/scenes/movies/scenes/movie-list/movie-item/movie-item.scss
@@ -3,9 +3,10 @@ $height: 40px;
 .movieItem {
   position: relative;
   width: 50%;
-  background-color: antiquewhite;
+  background-color: #fff;
   float: left;
   height:  300px;
+  overflow: hidden;
 
   div {
     background-color: rgba(0, 0, 0, 0.44);
